syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "message.proto";

option csharp_namespace = "GrpcMessage.Item";

package GrpcMessage.Item;

service ItemService {
//    rpc GetItem (GetItemMessage) returns (GrpcMessage.Common.Response);
    rpc GetItems (GetItemsMessage) returns (GrpcMessage.Common.Response);
    rpc AddItem (AddItemMessage) returns (GrpcMessage.Common.Response);
    rpc UpdateItem (UpdateItemMessage) returns (GrpcMessage.Common.Response);
    rpc CompleteItem (CompleteItemMessage) returns (GrpcMessage.Common.Response);
}

message GetItemMessage {
    int32 id = 1;
}

message GetItemsMessage {
    string todoId = 1;
}

message AddItemMessage {
    string todoId = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp dueDate = 4;
}

message UpdateItemMessage {
    string id = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp dueDate = 4;
}

message CompleteItemMessage {
    string id = 1;
}

message ItemMessage {
    string id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
    google.protobuf.Timestamp dueDate = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
    google.protobuf.Timestamp completedAt = 8;

}
